--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.nd705</groupId>
 	<artifactId>shop_test-EasyBot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>shop_test-EasyBot</name>
 	<description>Test Java and Spring Boot</description>
 	<properties>
