--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8084
-spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.hibernate.ddl-auto=validate 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
